<?xml version="1.0"?>
<package format="3">
  <name>voxblox</name>
  <version>3.3.3</version>
  <description>Voxblox</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen_vendor</build_depend>
  <build_depend>eigen_checks</build_depend>
  <build_depend>gflags_vendor</build_depend>
  <build_depend>glog_vendor</build_depend>
  <build_depend>minkindr</build_depend>
  <build_depend>protobuf3_vendor</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
