<?xml version="1.0"?>
<package format="3">
  <name>voxblox_ros</name>
  <version>3.3.3</version>
  <description>Voxblox ROS interface</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>gflags_vendor</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>minkindr_conversions</build_depend>
  <build_depend>pcl_vendor</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>voxblox</build_depend>
  <build_depend>voxblox_msgs</build_depend>
  <build_depend>voxblox_rviz_plugin</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
