<?xml version="1.0"?>
<package format="3">
  <name>voxblox_rviz_plugin</name>
  <version>3.3.3</version>
  <description>RViz plugin for displaying incremental voxblox mesh messages.</description>
  <maintainer email="ztaylorr@ethz.ch">Zachary Taylor</maintainer>
  <license>BSD</license>
  <author>Zachary Taylor</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rviz_common</build_depend>
  <build_depend>voxblox</build_depend>
  <build_depend>voxblox_msgs</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <export>
      <rviz2 plugin="${prefix}/plugin_description.xml"/>
      <build_type>ament_cmake</build_type>
  </export>

</package>
